--- a/sdk-resources/resources/api_client.mustache
+++ b/sdk-resources/resources/api_client.mustache
@@ -31,6 +31,17 @@ from {{packageName}}.exceptions import (
     ServiceException
 )
 
+class bcolors:
+    HEADER = '\033[95m'
+    OKBLUE = '\033[94m'
+    OKCYAN = '\033[96m'
+    OKGREEN = '\033[92m'
+    WARNING = '\033[93m'
+    FAIL = '\033[91m'
+    ENDC = '\033[0m'
+    BOLD = '\033[1m'
+    UNDERLINE = '\033[4m'
+
 
 class ApiClient:
     """Generic API client for OpenAPI client library builds.
@@ -191,13 +202,12 @@ class ApiClient:
         # Add Authentication header to request
         header_params['Authorization'] = self.configuration.access_token
 
-        if self.configuration.experimental and 'X-SailPoint-Experimental' in header_params:
-            print("TESTING")
-            print(f"{bcolors.WARNING}Warning: No active frommets remain. Continue?{bcolors.ENDC}")
+        if not self.configuration.experimental and 'X-SailPoint-Experimental' in header_params:
+            del header_params['X-SailPoint-Experimental']
+            print(f"{bcolors.WARNING}Warning: You are using Experimental APIs. Set configuration.experimental = True to enable these APIs in the SDK.{bcolors.ENDC}")
             pass
         elif self.configuration.experimental == True:
-            print(f"{bcolors.WARNING}Warning: No active frommets remain. Continue?{bcolors.ENDC}")
-            #del header_params['X-SailPoint-Experimental']
+            print(f"{bcolors.WARNING}Warning: You are using Experimental APIs{bcolors.ENDC}")
 
         # path parameters
         if path_params:
