Update generator and template files for python to v7.8.0

--- a/sdk-resources/resources/api.mustache
+++ b/sdk-resources/resources/api.mustache
@@ -1,23 +1,16 @@
 # coding: utf-8
 
 {{>partial_header}}
-
-import io
 import warnings
-
 from pydantic import validate_call, Field, StrictFloat, StrictStr, StrictInt
-from typing import Dict, List, Optional, Tuple, Union, Any
-
-try:
-    from typing import Annotated
-except ImportError:
-    from typing_extensions import Annotated
+from typing import Any, Dict, List, Optional, Tuple, Union
+from typing_extensions import Annotated
 
 {{#imports}}
 {{import}}
 {{/imports}}
 
-from {{packageName}}.api_client import ApiClient
+from {{packageName}}.api_client import ApiClient, RequestSerialized
 from {{packageName}}.api_response import ApiResponse
 from {{packageName}}.rest import RESTResponseType
 
@@ -84,7 +77,7 @@ class {{classname}}:
         _content_type,
         _headers,
         _host_index,
-    ) -> Tuple:
+    ) -> RequestSerialized:
 
         {{#servers.0}}
         _hosts = [{{#servers}}
@@ -108,7 +101,7 @@ class {{classname}}:
         _query_params: List[Tuple[str, str]] = []
         _header_params: Dict[str, Optional[str]] = _headers or {}
         _form_params: List[Tuple[str, str]] = []
-        _files: Dict[str, str] = {}
+        _files: Dict[str, Union[str, bytes]] = {}
         _body_params: Optional[bytes] = None
 
         # process the path parameters
@@ -170,7 +163,7 @@ class {{classname}}:
             {{#isBinary}}
             # convert to byte array if the input is a file name (str)
             if isinstance({{paramName}}, str):
-                with io.open({{paramName}}, "rb") as _fp:
+                with open({{paramName}}, "rb") as _fp:
                     _body_params = _fp.read()
             else:
                 _body_params = {{paramName}}
@@ -183,7 +176,7 @@ class {{classname}}:
         {{#constantParams}}
         {{#isQueryParam}}
         # Set client side default value of Query Param "{{baseName}}".
-        _query_params['{{baseName}}'] = {{#_enum}}'{{{.}}}'{{/_enum}}
+        _query_params.append(('{{baseName}}', {{#_enum}}'{{{.}}}'{{/_enum}}))
         {{/isQueryParam}}
         {{#isHeaderParam}}
         # Set client side default value of Header Param "{{baseName}}".
@@ -193,11 +186,12 @@ class {{classname}}:
 
         {{#hasProduces}}
         # set the HTTP header `Accept`
-        _header_params['Accept'] = self.api_client.select_header_accept(
-            [{{#produces}}
-                '{{{mediaType}}}'{{^-last}}, {{/-last}}{{/produces}}
-            ]
-        )
+        if 'Accept' not in _header_params:
+            _header_params['Accept'] = self.api_client.select_header_accept(
+                [{{#produces}}
+                    '{{{mediaType}}}'{{^-last}}, {{/-last}}{{/produces}}
+                ]
+            )
         {{/hasProduces}}
 
         {{#hasConsumes}}
