--- a/sdk-resources/resources/asyncio/rest.mustache
+++ b/sdk-resources/resources/asyncio/rest.mustache
@@ -6,6 +6,7 @@ import io
 import json
 import re
 import ssl
+from typing import Optional, Union
 
 import aiohttp
 import aiohttp_retry
@@ -72,13 +73,14 @@ class RESTClientObject:
         )
 
         retries = configuration.retries
+        self.retry_client: Optional[aiohttp_retry.RetryClient]
         if retries is not None:
             self.retry_client = aiohttp_retry.RetryClient(
                 client_session=self.pool_manager,
                 retry_options=aiohttp_retry.ExponentialRetry(
                     attempts=retries,
-                    factor=0.0,
-                    start_timeout=0.0,
+                    factor=2.0,
+                    start_timeout=0.1,
                     max_timeout=120.0
                 )
             )
@@ -175,10 +177,10 @@ class RESTClientObject:
                         data.add_field(k, v)
                 args["data"] = data
 
-            # Pass a `bytes` parameter directly in the body to support
+            # Pass a `bytes` or `str` parameter directly in the body to support
             # other content types than Json when `body` argument is provided
             # in serialized form
-            elif isinstance(body, bytes):
+            elif isinstance(body, str) or isinstance(body, bytes):
                 args["data"] = body
             else:
                 # Cannot generate the request from given parameters
@@ -187,6 +189,7 @@ class RESTClientObject:
                          declared content type."""
                 raise ApiException(status=0, reason=msg)
 
+        pool_manager: Union[aiohttp.ClientSession, aiohttp_retry.RetryClient]
         if self.retry_client is not None and method in ALLOW_RETRY_METHODS:
             pool_manager = self.retry_client
         else:
