Update Python SDK to handle xml response types

--- a/sdk-resources/resources/api_client.mustache
+++ b/sdk-resources/resources/api_client.mustache
@@ -11,6 +11,7 @@ import mimetypes
 import os
 import re
 import tempfile
+import xmltodict
 
 from urllib.parse import quote
 from typing import Tuple, Optional, List, Dict, Union
@@ -435,6 +436,8 @@ class ApiClient:
                 data = ""
             else:
                 data = json.loads(response_text)
+        elif content_type.startswith("application/xml") or content_type.startswith("text/xml"):
+            data = xmltodict.parse(response_text)
         elif content_type.startswith("text/plain"):
             data = response_text
         else:
