--- a/sdk-resources/resources/model_generic.mustache
+++ b/sdk-resources/resources/model_generic.mustache
@@ -88,7 +88,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
         {{/isContainer}}
         {{^isContainer}}
         if value not in set([{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}]):
-            warnings.warn("must be one of enum values ({{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}) unknown value: {i}")
+            warnings.warn(f"must be one of enum values ({{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}) unknown value: {value}")
         {{/isContainer}}
         return value
     {{/isEnum}}
