update for handling code examples overlay

--- a/sdk-resources/resources/developerSite_code_examples.mustache
+++ b/sdk-resources/resources/developerSite_code_examples.mustache
@@ -1,3 +1,5 @@
+{{#apiInfo}}
+{{#apis}}
 {{#operations}}
 {{#operation}}
 - path: {{path}}
@@ -60,3 +62,6 @@
               print("Exception when calling {{classname}}->{{operationId}}: %s\n" % e)
   {{/operation}}
 {{/operations}}
+{{/apis}}
+{{/apiInfo}}
+
