Add v2026 release to the python SDK

--- a/sdk-resources/resources/model_doc.mustache
+++ b/sdk-resources/resources/model_doc.mustache
@@ -1,12 +1,12 @@
 ---
-id: {{#lambda.kebabcase}}{{#lambda.titlecase}}{{funtionPrefix}}{{classname}}{{/lambda.titlecase}}{{/lambda.kebabcase}}
+id: {{#lambda.kebabcase}}{{#lambda.titlecase}}{{functionPrefix}}{{classname}}{{/lambda.titlecase}}{{/lambda.kebabcase}}
 title: {{#lambda.titlecase}}{{classname}}{{/lambda.titlecase}}
 pagination_label: {{classname}}
 sidebar_label: {{classname}}
 sidebar_class_name: pythonsdk
-keywords: ['python', 'Python', 'sdk', '{{classname}}', '{{funtionPrefix}}{{classname}}'] 
+keywords: ['python', 'Python', 'sdk', '{{classname}}', '{{functionPrefix}}{{classname}}'] 
 slug: /tools/sdk/python/{{#lambda.lowercase}}{{subModuleName}}{{/lambda.lowercase}}/models/{{#lambda.kebabcase}}{{#lambda.titlecase}}{{classname}}{{/lambda.titlecase}}{{/lambda.kebabcase}}
-tags: ['SDK', 'Software Development Kit', '{{classname}}', '{{funtionPrefix}}{{classname}}']
+tags: ['SDK', 'Software Development Kit', '{{classname}}', '{{functionPrefix}}{{classname}}']
 ---
 
 {{#models}}{{#model}}# {{classname}}
